# aerofoil

./: CMakeLists.txt  README.md
src/: main.cpp
src/math/: linAlg.cpp  linAlg.hpp
src/physics/: aerofoil.cpp  aerofoil.hpp  airflow.cpp  airflow.hpp
src/rendering/: render.cpp  render.hpp
